--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,19 +9,9 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item routerLink="login">
-              <ion-label>
-                Login
-              </ion-label>
-            </ion-item>
             <ion-item routerLink="setup">
               <ion-label>
                 Setup
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="data">
-              <ion-label>
-                Data
               </ion-label>
             </ion-item>
             <ion-item routerLink="pit">
@@ -34,11 +24,11 @@
                 Scout
               </ion-label>
             </ion-item>
-            <ion-item routerLink="qr">
-              <ion-label>
-                QR Code
-              </ion-label>
-            </ion-item>
+<!--            <ion-item routerLink="qr">-->
+<!--              <ion-label>-->
+<!--                QR Code-->
+<!--              </ion-label>-->
+<!--            </ion-item>-->
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
