--- a/src/app/scout/tele/tele.component.html
+++ b/src/app/scout/tele/tele.component.html
@@ -1,6 +1,348 @@
+<form [formGroup]="teleForm" novalidate *ngIf="teleForm !== undefined">
     <ion-row>
         <ion-col>
-            Tele Form
+            <ion-row formGroupName="performance" *ngIf="false">
+                <ion-col class="ns-card-form">
+                    <ion-row>
+                        <ion-col>
+                            <ion-item color="primary">
+                                <ion-label>
+                                    Rocket
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-row>
+                                <ion-col size="12">
+                                    <ion-item lines="none">
+                                        <ion-label>
+                                            Cell Attempts
+                                        </ion-label>
+                                    </ion-item>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col>
+                                    <ion-button
+                                            color="success"
+                                            (click)="increaseValue('performance','tele_numCellAttempt')">
+                                        +
+                                    </ion-button>
+                                </ion-col>
+                                <ion-col>
+                                    {{teleForm.value['performance']['tele_numCellAttempt']}}
+                                </ion-col>
+                                <ion-col>
+                                    <ion-button
+                                            color="danger"
+                                            (click)="decreaseValue('performance', 'tele_numCellAttempt')">
+                                        -
+                                    </ion-button>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col>
+                                    <ion-row>
+                                        <ion-col>
+                                            <ion-item lines="none">
+                                                <ion-label>
+                                                    Cell Success
+                                                </ion-label>
+                                            </ion-item>
+                                        </ion-col>
+                                    </ion-row>
+                                    <ion-row>
+                                        <ion-col>
+                                            <ion-button
+                                                    color="success"
+                                                    (click)="increaseValue('performance', 'tele_numCellSuccess')">
+                                                +
+                                            </ion-button>
+                                        </ion-col>
+                                        <ion-col>
+                                            {{teleForm.value['performance']['tele_numCellSuccess']}}
+                                        </ion-col>
+                                        <ion-col>
+                                            <ion-button
+                                                    color="danger"
+                                                    (click)="decreaseValue('performance', 'tele_numCellSuccess')">
+                                                -
+                                            </ion-button>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-col>
+                            </ion-row>
+                        </ion-col>
+                        <ion-col>
+                            <img src="assets/imgs/ports.png" style="width: 100px" >
+                        </ion-col>
+                        <ion-col>
+                            <ion-list>
+                                <ion-item class="ns-pointer" (click)="setTelePosition('tele_flOuter')">
+                                    <ion-label>
+                                        Outer
+                                    </ion-label>
+                                    <ion-toggle formControlName="tele_flOuter" color="primary"></ion-toggle>
+                                </ion-item>
+                                <ion-item class="ns-pointer" (click)="setTelePosition('tele_flInner')">
+                                    <ion-label>
+                                        Inner
+                                    </ion-label>
+                                    <ion-toggle formControlName="tele_flInner" color="primary"></ion-toggle>
+                                </ion-item>
+                                <ion-item class="ns-pointer" (click)="setTelePosition('tele_flLower')">
+                                    <ion-label>
+                                        Lower
+                                    </ion-label>
+                                    <ion-toggle formControlName="tele_flLower" color="primary"></ion-toggle>
+                                </ion-item>
+                            </ion-list>
+                        </ion-col>
+                    </ion-row>
+                </ion-col>
+            </ion-row>
+            <ion-row formGroupName="controlPanel">
+                <ion-col>
+                    <ion-row>
+                        <ion-col>
+                            <ion-item color="primary">
+                                <ion-label>
+                                    Control Panel
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+
+                    </ion-row>
+                    <ion-row class="ion-justify-content-center">
+                        <ion-col>
+                            <ion-list>
+                                <ion-item>
+                                    <ion-label>
+                                        Rotation Control
+                                    </ion-label>
+                                    <ion-toggle formControlName="tele_flPanelRotation" color="primary"></ion-toggle>
+                                </ion-item>
+                                <ion-item>
+                                    <ion-label>
+                                        Time Taken
+                                    </ion-label>
+                                    <ion-select formControlName="tele_idPanelRotationTime">
+                                        <ion-select-option value="1">NA</ion-select-option>
+                                        <ion-select-option value="2">> 7 sec</ion-select-option>
+                                        <ion-select-option value="3">3-7 sec</ion-select-option>
+                                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                                    </ion-select>
+                                </ion-item>
+                            </ion-list>
+                        </ion-col>
+                        <ion-col>
+                            <ion-list>
+                                <ion-item>
+                                    <ion-label>
+                                        Position Control
+                                    </ion-label>
+                                    <ion-toggle formControlName="tele_flPanelPosition" color="primary"></ion-toggle>
+                                </ion-item>
+                                <ion-item>
+                                    <ion-label>
+                                        Time Taken
+                                    </ion-label>
+                                    <ion-select formControlName="tele_idPanelPositionTime">
+                                        <ion-select-option value="1">NA</ion-select-option>
+                                        <ion-select-option value="2">> 7 sec</ion-select-option>
+                                        <ion-select-option value="3">3-7 sec</ion-select-option>
+                                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                                    </ion-select>
+                                </ion-item>
+                            </ion-list>
+                        </ion-col>
+                    </ion-row>
+
+                    <ion-row>
+                        <ion-col size="6">
+                            <ion-row>
+                                <ion-col size="12">
+                                    <ion-item lines="none">
+                                        <ion-label>
+                                            Attempts
+                                        </ion-label>
+                                    </ion-item>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row class="ion-justify-content-center">
+                                <ion-col size="3">
+                                    <ion-button
+                                            color="success"
+                                            (click)="increaseValue('controlPanel', 'tele_numPanelAttempt')">
+                                        +
+                                    </ion-button>
+                                </ion-col>
+                                <ion-col size="1">
+                                    {{teleForm.value['controlPanel']['tele_numPanelAttempt']}}
+                                </ion-col>
+                                <ion-col size="3">
+                                    <ion-button
+                                            color="danger"
+                                            (click)="decreaseValue('controlPanel', 'tele_numPanelAttempt')">
+                                        -
+                                    </ion-button>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row class="ion-justify-content-center">
+                                <ion-col size="6">
+                                    <ion-row>
+                                        <ion-col>
+                                            <ion-item lines="none">
+                                                <ion-label>
+                                                    Panel Success
+                                                </ion-label>
+                                            </ion-item>
+                                        </ion-col>
+                                    </ion-row>
+                                    <ion-row>
+                                        <ion-col>
+                                            <ion-button
+                                                    color="success"
+                                                    (click)="increaseValue('controlPanel', 'tele_numPanelSuccess')">
+                                                +
+                                            </ion-button>
+                                        </ion-col>
+                                        <ion-col size="1">
+                                            {{teleForm.value['controlPanel']['tele_numPanelSuccess']}}
+                                        </ion-col>
+                                        <ion-col>
+                                            <ion-button
+                                                    color="danger"
+                                                    (click)="decreaseValue('controlPanel', 'tele_numPanelSuccess')">
+                                                -
+                                            </ion-button>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-col>
+                            </ion-row>
+                        </ion-col>
+                        <ion-col size="6">
+                            <ion-row class="ion-justify-content-center">
+                                <ion-col>
+                                    <img src="assets/imgs/tele.png">
+                                </ion-col>
+                            </ion-row>
+                        </ion-col>
+                    </ion-row>
+                </ion-col>
+            </ion-row>
+        </ion-col>
+        <ion-col formGroupName="endGame">
+            <ion-list>
+                <ion-item color="primary">
+                    <ion-label>
+                        End Game
+                    </ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                        Park
+                    </ion-label>
+                    <ion-toggle formControlName="tele_flPark" color="primary"></ion-toggle>
+                </ion-item>
+                <ion-item>
+                    <ion-label position="floating">
+                        Climb
+                    </ion-label>
+                    <ion-select formControlName="tele_idClimb" placeholder="(NA = not attempted)">
+                        <ion-select-option value="1">NA</ion-select-option>
+                        <ion-select-option value="2">Failed</ion-select-option>
+                        <ion-select-option value="3">Success</ion-select-option>
+                    </ion-select>
+                </ion-item>
+                <ion-item>
+                    <ion-label position="floating">
+                        Time to Grip
+                    </ion-label>
+                    <ion-select formControlName="tele_idClimbGrabTime">
+                        <ion-select-option value="1">NA</ion-select-option>
+                        <ion-select-option value="2">> 7 sec</ion-select-option>
+                        <ion-select-option value="3">3-7 sec</ion-select-option>
+                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                    </ion-select>
+                </ion-item>
+                <ion-item>
+                    <ion-label position="floating">
+                        Time from Grip to Climb
+                    </ion-label>
+                    <ion-select formControlName="tele_idClimbTime">
+                        <ion-select-option value="1">NA</ion-select-option>
+                        <ion-select-option value="2">> 7 sec</ion-select-option>
+                        <ion-select-option value="3">3-7 sec</ion-select-option>
+                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                    </ion-select>
+                </ion-item>
+                <ion-item>
+                    <ion-label position="floating">
+                        Outcome
+                    </ion-label>
+                    <ion-select formControlName="tele_idClimbOutcome">
+                        <ion-select-option value="1">NA</ion-select-option>
+                        <ion-select-option value="2">Self</ion-select-option>
+                        <ion-select-option value="3">Self + Others</ion-select-option>
+                        <ion-select-option value="4">Others</ion-select-option>
+                    </ion-select>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                        Buddies
+                    </ion-label>
+                    <ion-col>
+                        {{teleForm.value['endGame']['tele_numClimbOthers']}}
+                    </ion-col>
+                    <ion-col size="1">
+                        <ion-button
+                                (click)="increaseValue('endGame', 'tele_numClimbOthers')"
+                                color="success">+</ion-button>
+                    </ion-col>
+                    <ion-col size="1">
+                        <ion-button
+                                (click)="decreaseValue('endGame', 'tele_numClimbOthers')"
+                                color="danger">-</ion-button>
+                    </ion-col>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                        Balance
+                    </ion-label>
+                    <ion-toggle formControlName="tele_flClimbBalance" color="primary"></ion-toggle>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                       Correction
+                    </ion-label>
+                    <ion-toggle formControlName="tele_flClimbCorrection" color="primary"></ion-toggle>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                        Fail
+                    </ion-label>
+                    <ion-toggle formControlName="tele_flClimbFall" color="primary"></ion-toggle>
+                </ion-item>
+            </ion-list>
+        </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+        <ion-col size-lg="6">
+            <ion-button
+                    [disabled]="teleForm.pristine || teleForm.invalid"
+                    expand="block" color="success">
+                Save Tele
+            </ion-button>
         </ion-col>
     </ion-row>
 
+</form>
+
+<!--<ion-row *ngIf="teleForm !== undefined">-->
+<!--    <ion-col>-->
+<!--        <pre>{{teleForm.value | json}}</pre>-->
+<!--    </ion-col>-->
+<!--</ion-row>-->
